# clipboard-sync

./: Cargo.toml
src/: encryption.rs  fragmenter.rs  lib.rs  process.rs  validation.rs
src/encoding/: decoder.rs  encoder.rs
