[package]
name = "clipboard-sync"
version = "2.1.1"
readme = "README.md"
authors = ["Tomas Jakstas <tom.jakstas@gmail.com>"]
edition = "2018"
description = "Secure clipboard sync across your devices"
homepage = "https://github.com/songokas/clipboard-sync"
repository = "https://github.com/songokas/clipboard-sync"
license = "LICENSE"
default-run = "clipboard-sync"

[dependencies]
chacha20poly1305 = "0.10.1"
base64 = "0.21.7"
chrono = "0.4.33"
rand = " 0.8.5"
bincode = "1.3.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
serde_json = "1.0.113"
clap = "4.4.18"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.20"
env_logger = "0.11.1"
flate2 = "1.0.28"
walkdir = "2.4.0"
dirs = "5.0.1"
cached = "0.48.1"
jni = "0.21.1"
lazy_static = "1"
indexmap = "2.2.2"
laminar = { version = "0.5" }
thiserror = "1.0.56"
notify = "6.1.1"
x25519-dalek = { version = "2.0.1", features = ["serde"] }
blake2 = "0.10.6"
urlencoding = " 2.1.3"
# @TODO simplify/replace/remove
futures = "0.3.30"
crossbeam-channel = "0.5.11"
flume = "0.11.0"
mio = "0.8.10"
#

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"

[build-dependencies]
cargo-deb = "2.0.5"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
tokio-test = "0.4.3"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies.public-ip]
version = "0.2.2"
optional = true

[dependencies.quinn]
version = " 0.10.2"
optional = true

[dependencies.quiche]
version = "0.20.0"
optional = true

[dependencies.rustls]
version = "0.22.2"
optional = true

[dependencies.clipboard]
# using custom implementation due too multiple clipboard types
git = "https://github.com/songokas/rust-clipboard.git"
branch = "multiple-targets"
optional = true
# path = "../rust-clipboard"

[dependencies.rsntp]
version = "4.0.0"
optional = true

[features]

# default quic implementations
quic = []
quic-quiche = ["quic", "quiche"]
quic-quinn = ["quic", "quinn", "rustls"]

ntp = ["rsntp"]

frames = []
default = ["frames", "clipboard", "public-ip", "ntp"]
no-x = ["frames", "public-ip", "ntp"]


[package.metadata.deb]
maintainer = "Tomas Jakstas <tom.jakstas@gmail.com>"
copyright = "2020, Tomas Jakstas <tom.jakstas@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
Secure clipboard synchronization across your devices\
"""
#depends = "libxcb-render0 (>= 1.13.1), libxcb-shape0 (>= 1.13.1), libxcb1 (>= 1.13.1), libbsd0 (>= 0.9.1), libxdmcp6 (>= 1:1.1.2), libxau6 (>= 1:1.0.8), libc6 (>= 2.28), libxcb-xfixes0 (>= 1.13.1)"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/clipboard-sync", "usr/bin/", "755"],
    ["target/release/clipboard-relay", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
    ["debian/service", "lib/systemd/user/clipboard-sync.service", "644"], 
    ["debian/relay-service", "lib/systemd/system/clipboard-relay.service", "644"],
]

[package.metadata.deb.variants.aarch64]
depends = "libxcb-render0 (>= 1.13.1), libxcb-shape0 (>= 1.13.1), libxcb1 (>= 1.13.1), libbsd0 (>= 0.9.1), libxdmcp6 (>= 1:1.1.2), libxau6 (>= 1:1.0.8), libc6 (>= 2.28), libxcb-xfixes0 (>= 1.13.1)"

[package.metadata.deb.variants.headless]
features = ["frames", "public-ip", "ntp"]
default-features = false
depends = "libc6 (>= 2.28)"

[package.metadata.rpm]
package = "clipboard-sync"
cargo = { buildflags = ["--release"] }
targets = { clipboard-sync = { path = "/usr/bin/clipboard-sync" }, clipboard-relay = { path = "/usr/bin/clipboard-relay" } }
[package.metadata.rpm.files] 
"../debian/service" = { path = "/lib/systemd/user/clipboard-sync.service" }
"../debian/relay-service" = { path = "/lib/systemd/system/clipboard-relay.service" }

[[bin]]
name = "clipboard-sync"
path = "src/main.rs"